<resources>
    <string name="app_name">Padel Bellcaire</string>
    <string name="title_activity_main_acitivity">mainAcitivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity">Padel Bellcaire</string>
    <string name="title_activity_reserva">ReservaActivity</string>
    <string name="title_activity_tkm">Padel Bellcaire</string>
    <string name="hour_test">11:00-12:30</string>
    <string name="name_test">Pere Bergé</string>
    <string name="hint_name">Nom</string>
    <string name="day_test">27/02/2016</string>
    <string name="hour_reservation_test">11:00 - 12:30</string>
    <string name="avui">Avui</string>
    <string name="dema">Demà</string>
    <string name="app_title_image">App Title Image</string>
    <string name="app_logo">App Logo Image</string>
    <string name="padel">Padel Bellcaire</string>
    <string name="about_app">About app</string>
    <string name="reservation_test">Reserva</string>
    <string name="day_and_hour_text">Dia i hora</string>
    <string name="enter_name_text">Introdueix el nom de soci</string>
    <string name="enter_password_text">Introdueix el codi de seguretat</string>
    <string name="password_1_text">Contrasenya</string>
    <string name="password_2_text">Repeteix la contrasenya</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel·lar</string>
    <string name="wrong_password">Contrasenya incorrecta</string>
    <string name="reservation_cancelation">Reserva cancel·lada</string>
    <string name="reservation_cancelation_verb">Cancel·lar reserva</string>
    <string name="dialog_text">Introdueix el codi de seguretat facilitat al fer la reserva:</string>
    <string name="reservation_completed">Reserva completada!</string>
    <string name="undo">Desfer</string>
    <string name="reservation">Reserva</string>
    <string name="wrong_partner">Nom de soci buit o incorrecte</string>
    <string name="busy_timetable">El soci ja ha reservat pista el mateix dia</string>
    <string name="empty_password">El camp de contrasenya és buit</string>
    <string name="different_password">Les contrasenyes no coincideixen</string>
    <string name="undo_reservation_done">Reserva anul·lada</string>
    <string name="no_play_last_reservation">No pots reservar pista fins que no hagi caducat la teva última reserva</string>
    <string name="pere_link">https://github.com/pberge</string>
    <string name="albert_link">https://es.linkedin.com/in/albertsuarezmolgo</string>
    <string name="elena_link">https://es.linkedin.com/in/elenaruizsw</string>
    <string name="copyright">Copyright © 2016 All Rights Reserved.</string>
    <string name="about">Aplicació creada per a un equip de tres estudiants de la Facultat d\'Informatica de Barcelona.</string>
    <string name="pere">Pere Berge</string>
    <string name="albert">Albert Suarez</string>
    <string name="elena">Elena Ruiz</string>
</resources>
