<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.ReservationActivity"
    tools:showIn="@layout/activity_reservation">

    <TextView
        android:id="@+id/day_and_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_and_hour_text"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/primaryText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_test"
        android:id="@+id/day"
        android:textSize="13sp"
        android:textColor="@color/secondaryText"
        android:layout_below="@+id/day_and_hour"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryText"
        android:textSize="13sp"
        android:text="@string/hour_reservation_test"
        android:id="@+id/timeZone"
        android:layout_below="@+id/day"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/enter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryText"
        android:text="@string/enter_name_text"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/timeZone"
        android:layout_centerHorizontal="true" />

    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:queryHint="@string/hint_name"
        android:id="@+id/newName"
        android:layout_below="@id/enter_name"
        android:layout_centerHorizontal="true">
    </SearchView>

    <TextView
        android:id="@+id/enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryText"
        android:text="@string/enter_password_text"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/newName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:textSize="13sp"
        android:id="@+id/password_1"
        android:layout_below="@id/enter_password"
        android:textColor="@color/secondaryText"
        android:hint="@string/password_1_text"
        android:maxLines="1"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp">
    </EditText>

    <EditText
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:id="@+id/password_2"
        android:textSize="13sp"
        android:layout_below="@id/password_1"
        android:textColor="@color/secondaryText"
        android:hint="@string/password_2_text"
        android:maxLines="1"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp">
    </EditText>

</RelativeLayout>
