<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="pereberge.sumproject.activity.AboutActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_padel_big"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/text_about_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/logo_image"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="13sp"
        android:textColor="@color/primaryText"
        android:text="@string/copyright"/>


    <TextView
        android:id="@+id/text_about_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_about_1"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/primaryText"
        android:text="@string/about"/>

    <TextView
        android:id="@+id/text_about_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_about_2"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="17sp"
        android:textColor="@color/primaryText"
        android:text="@string/pere"/>


    <TextView
        android:id="@+id/text_about_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_about_3"
        android:textAlignment="center"
        android:layout_marginTop="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="17sp"
        android:textColor="@color/primaryText"
        android:text="@string/albert"/>

    <TextView
        android:id="@+id/text_about_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_about_4"
        android:textAlignment="center"
        android:layout_marginTop="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="17sp"
        android:textColor="@color/primaryText"
        android:text="@string/elena"/>

</RelativeLayout>
