<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.TimetableActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.PopupOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/lightPrimaryColor"
                    android:text="@string/padel"
                    android:textSize="26sp"
                    android:layout_gravity="center_vertical"/>

                <ImageButton
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/info"
                    android:contentDescription="@string/about_app" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.Toolbar
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/today"
                    android:text="@string/avui"
                    android:textColor="@color/lightPrimaryColor"
                    android:background="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_weight="0.5" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/tomorrow"
                    android:text="@string/dema"
                    android:textColor="@color/lightPrimaryColor"
                    android:background="@color/colorPrimary"
                    android:layout_weight="0.5" />
                
            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_timetable" />

</android.support.design.widget.CoordinatorLayout>
